@@ -81,6 +81,8 @@ Detailed change log :
     - X11 keymaps: added new one for Swiss-German and improved Italian map.
     - RFB / vncsrv: VGA features h/v pel panning and split screen now supported.
     - RFB: added support for the pixel format RGB332.
+    - added display library option for disabling the Bochs gui console to use
+      the default system console instead (rfb, sdl, sdl2, vncsrv, x).
     - win32: added display library option "autoscale" to scale a small
       simulation window by factor 2, 4 or 8 depending in desktop window size.
     - wx: fixed status bar handling to avoid segfaults and deadlocks.
